public/styles/main.css
body {
  /*padding-top: 50px;*/
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}

a {
  color: #00B7FF;
}

.player {
  color: #bbbbbb;
  position: fixed;
  bottom: 0;
  height: 120px;
  width: 100%;
  border-top: solid #bbbbbb;
  border-top-width: 2px;
  background-color: white;
}

.noPlayer {
  height: 0;
  bottom: 0;
}

table {
  overflow: auto;
}

i {
  margin: 5px;
  margin-top: 10px;
}

#main-container, #search-container {
/*  margin-top: 15px;*/
  margin-top: -1px;
  /* overflow-y: scroll; */
}

#main-container :first-child, #search-container :first-child {
/*  border-top: 1px solid #ddd;
*/}

#main-container :nth-child(even), #search-container :nth-child(even) {
  background-color: #f9f9f9;
}

.song-container {
  width: 100%;
  height: 45px;
  line-height: 45px;
  padding-left: 20px;
  border-bottom: 1px solid #ddd;
  position: relative;
/*  overflow-x: hidden;
  overflow-y: hidden;
*/}

.song-container:hover{
  background-color: #f5f5f5;
  cursor: pointer;
}

.addToQueue, .removeFromQueue {
  float: right;
  top: 0;
  right: 0;
  position: absolute;
  margin-top: 5px;
  margin-right: 5px;
  line-height: 20px;
}

.container-custom {
  position: fixed;
  width: 100%;
  top: 51px;
  bottom: 120px;
  overflow:scroll;
}

.shareViewContainer {
  bottom: 0px !important;
}
@media (min-width: 1200px) {
  .container-custom {
    max-width: 100%;
  }
}

#sidebar {
  background-color: gray;
  height: 100%;
  overflow-y: scroll;
  padding-left: 0;
  padding-right: 0;
}

#sidebar .song-container {
  white-space: nowrap;
  overflow-x: scroll;
}

#content {
  overflow-y: scroll;
  height: 100%;
  padding-top: 50px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 120px;
}

.queueButton {
  padding-bottom: 5px;
  margin-left: 5px;
}

#share {
  margin-left: 5px;
}

.img-container {
  height: 50%;
  width: 100%;
  background-color: black;
}

.img-container img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: 100%;
}

.playlist-container, .songs-container {
  height: 50%;
}

.queueNameDiv {
  margin-top: 20px;
}

.player-options {
  display: inline-block;
  position: absolute;
  margin-left: 15px;
  top: 15%;
}

.selected {
  color: black;
}

.nowPlaying {
  font-weight: bold;
}

.container-share{
  padding-top: 51px;
}

ul.dropdown-menu{
}

.stuff{
  opacity: 0;
}

